--- a/custom_actions/templates/active-response.yml
+++ b/custom_actions/templates/active-response.yml
@@ -12,8 +12,19 @@ type: action
       keys:
         - WAZUH_API_TOKEN
         - WAZUH_API_URL
-      optional_keys: null
-      optional: false
+  expects:
+    command:
+      type: str
+      description: Command running in the agent. If this value starts with !, then it
+        refers to a script name instead of a command name
+    verify_ssl:
+      type: bool
+      description: If False, disables SSL verification for internal networks.
+      default: true
+    agents_list:
+      type: str | None
+      description: List of agent IDs (separated by comma), all agents selected by
+        default if not specified.
   steps:
     - ref: run_active_response
       action: core.http_request
