--- a/custom_actions/templates/active_response.yml
+++ b/custom_actions/templates/active_response.yml
@@ -15,16 +15,14 @@ type: action
   expects:
     command:
       type: str
-      description: Command running in the agent. If this value starts with !, then it
-        refers to a script name instead of a command name
+      description: Command running in the agent. If this value starts with !, then it refers to a script name instead of a command name
     verify_ssl:
       type: bool
       description: If False, disables SSL verification for internal networks.
       default: true
     agents_list:
       type: str | None
-      description: List of agent IDs (separated by comma), all agents selected by
-        default if not specified.
+      description: List of agent IDs (separated by comma), all agents selected by default if not specified.
   steps:
     - ref: run_active_response
       action: core.http_request
