--- a/custom_actions/templates/active_response.yml
+++ b/custom_actions/templates/active_response.yml
@@ -1,4 +1,5 @@
 type: action
+definition:
   name: wazuh_active_response
   namespace: tools.wazuh
   title: Wazuh Agents Active Response
@@ -37,4 +38,3 @@ type: action
           command: ${{ inputs.command }}
         verify_ssl: ${{ inputs.verify_ssl  }}
   returns: ${{ steps.run_active_response.result }}
-
