--- a/custom_actions/templates/wazuh/update_agent.yml
+++ b/custom_actions/templates/wazuh/update_agent.yml
@@ -10,7 +10,6 @@ definition:
   secrets:
     - name: wazuh
       keys:
-        - WAZUH_API_TOKEN
         - WAZUH_API_URL
   expects:
     verify_ssl:
@@ -18,6 +17,10 @@ definition:
       description: If False, disables SSL verification for internal networks.
       default: true
   steps:
+    - ref: get_access_token
+      action: tools.wazuh.get_access_token
+      args:
+        url: ${{ SECRETS.wazuh.WAZUH_API_URL }}
     - ref: get_outdated_agents
       action: core.http_request
       args:
