--- a/custom_actions/templates/wazuh/update_agent.yml
+++ b/custom_actions/templates/wazuh/update_agent.yml
@@ -16,12 +16,17 @@ definition:
       type: bool
       description: If False, disables SSL verification for internal networks.
       default: true
+    auth_token_exp_timeout:
+      type: int
+      description: Change the token base duration
+      default: 900
   steps:
     - ref: get_access_token
       action: tools.wazuh.get_access_token
       args:
         url: ${{ SECRETS.wazuh.WAZUH_API_URL }}
         verify_ssl: ${{ inputs.verify_ssl  }}
+        auth_token_exp_timeout: 900
     - ref: get_outdated_agents
       action: core.http_request
       args:
