fix: access token wazuh

--- a/custom_actions/templates/wazuh/update_agent.yml
+++ b/custom_actions/templates/wazuh/update_agent.yml
@@ -21,7 +21,7 @@ definition:
       description: Change the token base duration
       default: 900
     url:
-      type: str
+      type: secrets
       description: URL for the Wazuh WUI API.
   steps:
     - ref: get_access_token
