fix: access token wazuh

--- a/custom_actions/templates/wazuh/update_agent.yml
+++ b/custom_actions/templates/wazuh/update_agent.yml
@@ -7,10 +7,6 @@ definition:
   display_group: Wazuh
   doc_url: https://documentation.wazuh.com/current/user-manual/api/reference.html#operation/api.controllers.agent_controller.put_upgrade_agents
   author: bouddha-fr
-  secrets:
-    - name: wazuh
-      keys:
-        - WAZUH_API_URL
   expects:
     verify_ssl:
       type: bool
@@ -21,19 +17,19 @@ definition:
       description: Change the token base duration
       default: 900
     url:
-      type: secrets
+      type: str
       description: URL for the Wazuh WUI API.
   steps:
     - ref: get_access_token
       action: tools.wazuh.get_access_token
       args:
-        url: ${{ SECRETS.wazuh.WAZUH_API_URL }}
+        url: ${{ inputs.url }}
         verify_ssl: ${{ inputs.verify_ssl  }}
         auth_token_exp_timeout: 900
     - ref: get_outdated_agents
       action: core.http_request
       args:
-        url: ${{ SECRETS.wazuh.WAZUH_API_URL }}/agents/outdated
+        url: ${{ inputs.url }}/agents/outdated
         method: GET
         headers:
           Authorization: Bearer ${{ steps.get_access_token.result }}
@@ -41,7 +37,7 @@ definition:
     - ref: upgrade_agents
       action: core.http_request
       args:
-        url: ${{ SECRETS.wazuh.WAZUH_API_URL }}/agents/upgrade
+        url: ${{ inputs.url }}/agents/upgrade
         method: PUT
         params:
           agents_list: ${{ FN.join(steps.get_outdated_agents.result.data.data.affected_items[*].id, ",") }}
@@ -51,7 +47,7 @@ definition:
     - ref: upgrade_result
       action: core.http_request
       args:
-        url: ${{ SECRETS.wazuh.WAZUH_API_URL }}/agents/upgrade_result
+        url: ${{ inputs.url }}/agents/upgrade_result
         method: GET
         params:
           agents_list: ${{ FN.join(steps.upgrade_agents.result.data.data.affected_items[*].agent, ",") }}
