fix: access token wazuh

--- a/custom_actions/templates/wazuh/update_agent_wazuh.yml
+++ b/custom_actions/templates/wazuh/update_agent_wazuh.yml
@@ -24,6 +24,8 @@ definition:
       action: tools.wazuh.get_access_token
       args:
         url: ${{ inputs.url }}
+        verify_ssl: ${{ inputs.verify_ssl  }}
+        auth_token_exp_timeout: 900
     - ref: get_outdated_agents
       action: core.http_request
       args:
