--- a/custom_actions/templates/wazuh/ingest_event.yml
+++ b/custom_actions/templates/wazuh/ingest_event.yml
@@ -5,12 +5,12 @@ definition:
   title: Ingest Event into Wazuh
   description: Sends a raw log event to the Wazuh manager via the /events API endpoint for analysis.
   display_group: Wazuh
-  doc_url: https://documentation.wazuh.com/current/user-manual/api/reference.html#operation/api.controllers.ingest_controller.post_event
+  doc_url: https://documentation.wazuh.com/current/user-manual/api/reference.html#operation/api.controllers.event_controller.forward_event
   author: null
   expects:
     base_url:
       type: str
-      description: Base URL of the Wazuh API (e.g. https://wazuh-prod.aukfood.net:55000)
+      description: Base URL of the Wazuh API
     verify_ssl:
       type: bool
       description: Whether to verify SSL certificates.
