--- a/custom_actions/templates/wazuh/manage_agents.yml
+++ b/custom_actions/templates/wazuh/manage_agents.yml
@@ -94,11 +94,4 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
   
-  returns: ${{ 
-    steps.list_agents.result if inputs.operation == "list" else
-    steps.get_agent.result if inputs.operation == "get" else
-    steps.add_agent.result if inputs.operation == "add" else
-    steps.remove_agent.result if inputs.operation == "remove" else
-    steps.restart_agent.result if inputs.operation == "restart" else
-    null
-  }} 
+  returns: ${{ FN.if(inputs.operation == "list", steps.list_agents.result, FN.if(inputs.operation == "get", steps.get_agent.result, FN.if(inputs.operation == "add", steps.add_agent.result, FN.if(inputs.operation == "remove", steps.remove_agent.result, FN.if(inputs.operation == "restart", steps.restart_agent.result, null))))) }}
