--- a/custom_actions/templates/wazuh/manage_rules.yml
+++ b/custom_actions/templates/wazuh/manage_rules.yml
@@ -98,11 +98,4 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
   
-  returns: ${{ 
-    steps.list_rules.result if inputs.operation == "list" else
-    steps.get_rule.result if inputs.operation == "get" else
-    steps.add_rule.result if inputs.operation == "add" else
-    steps.update_rule.result if inputs.operation == "update" else
-    steps.delete_rule.result if inputs.operation == "delete" else
-    null
-  }} 
+  returns: ${{ FN.if(inputs.operation == "list", steps.list_rules.result, FN.if(inputs.operation == "get", steps.get_rule.result, FN.if(inputs.operation == "add", steps.add_rule.result, FN.if(inputs.operation == "update", steps.update_rule.result, FN.if(inputs.operation == "delete", steps.delete_rule.result, null))))) }} 
