--- a/custom_actions/templates/wazuh/manage_rules.yml
+++ b/custom_actions/templates/wazuh/manage_rules.yml
@@ -33,14 +33,14 @@ definition:
       description: Duration for the authentication token's validity (in seconds).
       default: 900
   steps:
-    - ref: get_access_token
+    - name: get_access_token
       action: tools.wazuh.get_access_token
       args:
         url: ${{ inputs.base_url }}
         verify_ssl: ${{ inputs.verify_ssl }}
         auth_token_exp_timeout: ${{ inputs.auth_token_exp_timeout }}
     
-    - ref: list_rules
+    - name: list_rules
       action: core.http_request
       if: ${{ inputs.operation == "list" }}
       args:
@@ -50,7 +50,7 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - ref: get_rule
+    - name: get_rule
       action: core.http_request
       if: ${{ inputs.operation == "get" }}
       args:
@@ -60,7 +60,7 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - ref: add_rule
+    - name: add_rule
       action: core.http_request
       if: ${{ inputs.operation == "add" }}
       args:
@@ -74,7 +74,7 @@ definition:
           path: ${{ inputs.rule_file }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - ref: update_rule
+    - name: update_rule
       action: core.http_request
       if: ${{ inputs.operation == "update" }}
       args:
@@ -88,7 +88,7 @@ definition:
           path: ${{ inputs.rule_file }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - ref: delete_rule
+    - name: delete_rule
       action: core.http_request
       if: ${{ inputs.operation == "delete" }}
       args:
