--- a/custom_actions/templates/wazuh/manage_agents.yml
+++ b/custom_actions/templates/wazuh/manage_agents.yml
@@ -33,14 +33,14 @@ definition:
       description: Duration for the authentication token's validity (in seconds).
       default: 900
   steps:
-    - name: get_access_token
+    - ref: get_access_token
       action: tools.wazuh.get_access_token
       args:
         url: ${{ inputs.base_url }}
         verify_ssl: ${{ inputs.verify_ssl }}
         auth_token_exp_timeout: ${{ inputs.auth_token_exp_timeout }}
     
-    - name: list_agents
+    - ref: list_agents
       action: core.http_request
       if: ${{ inputs.operation == "list" }}
       args:
@@ -50,7 +50,7 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - name: get_agent
+    - ref: get_agent
       action: core.http_request
       if: ${{ inputs.operation == "get" }}
       args:
@@ -60,7 +60,7 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - name: add_agent
+    - ref: add_agent
       action: core.http_request
       if: ${{ inputs.operation == "add" }}
       args:
@@ -74,7 +74,7 @@ definition:
           ip: ${{ inputs.agent_ip }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - name: remove_agent
+    - ref: remove_agent
       action: core.http_request
       if: ${{ inputs.operation == "remove" }}
       args:
@@ -84,7 +84,7 @@ definition:
           Authorization: Bearer ${{ steps.get_access_token.result }}
         verify_ssl: ${{ inputs.verify_ssl }}
     
-    - name: restart_agent
+    - ref: restart_agent
       action: core.http_request
       if: ${{ inputs.operation == "restart" }}
       args:
